// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remove should remove all the entities: should have three entities 1`] = `
Object {
  "$entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
    "3": Object {
      "completed": false,
      "id": 3,
      "title": "todo 3",
    },
  },
  "$ids": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`remove should remove all the entities: should remove all 1`] = `
Object {
  "$entities": Object {},
  "$ids": Array [],
}
`;

exports[`remove should remove by predicate: should have three entities 1`] = `
Object {
  "$entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
    "3": Object {
      "completed": false,
      "id": 3,
      "title": "todo 3",
    },
  },
  "$ids": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`remove should remove by predicate: should remove the entity with id of 1 1`] = `
Object {
  "$entities": Object {
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
    "3": Object {
      "completed": false,
      "id": 3,
      "title": "todo 3",
    },
  },
  "$ids": Array [
    2,
    3,
  ],
}
`;

exports[`remove should remove entities: should have three entities 1`] = `
Object {
  "$entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
    "3": Object {
      "completed": false,
      "id": 3,
      "title": "todo 3",
    },
  },
  "$ids": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`remove should remove entities: should remove two entities 1`] = `
Object {
  "$entities": Object {
    "3": Object {
      "completed": false,
      "id": 3,
      "title": "todo 3",
    },
  },
  "$ids": Array [
    3,
  ],
}
`;

exports[`remove should remove entity: should have two entities 1`] = `
Object {
  "$entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "$ids": Array [
    1,
    2,
  ],
}
`;

exports[`remove should remove entity: should remove one entity 1`] = `
Object {
  "$entities": Object {
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "$ids": Array [
    2,
  ],
}
`;

exports[`remove should work with ref: should have three ui entities 1`] = `
Object {
  "$UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": false,
    },
    "2": Object {
      "id": 2,
      "open": false,
    },
  },
  "$UIIds": Array [
    1,
    2,
  ],
}
`;

exports[`remove should work with ref: should remove the ui entity with id of 1 1`] = `
Object {
  "$UIEntities": Object {
    "2": Object {
      "id": 2,
      "open": false,
    },
  },
  "$UIIds": Array [
    2,
  ],
}
`;
